fixed-about-text-mobile-scaling
had to adjust the main content header padding for mobile (was too big)

--- a/css/layout.css
+++ b/css/layout.css
@@ -163,7 +163,7 @@
   }
 
   .content-area {
-    margin-top: 120px;
+    margin-top: 80px;
   }
 }
 
@@ -192,7 +192,7 @@
   }
 
   .content-area {
-    margin-top: 150px;
+    margin-top: 100px;
   }
 }
 
